--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: Deploy to Netlify
       env:
-        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        NETLIFY_AUTH_TOKEN: ${{nfp_4rBsXWaLrFaughVTJMfBfAhzvFA4rcDm043bN}}
+        NETLIFY_SITE_ID: ${{3ef5b4e9-cb53-4b30-b4d1-b2a8677c5dde}}
       run: |
         npm install -g netlify-cli
         netlify deploy --dir=build --prod --site $NETLIFY_SITE_ID
